did a bunch of stuff that I forgot to commit

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<button pButton >Test</button>
+<div class="h-screen w-screen flex flex-row" >
+	<app-navbar></app-navbar>
+	<div class="h-full w-full">
+		<router-outlet></router-outlet>
+	</div>
+</div>
