--- a/src/app/screens/group-category/group-category.component.html
+++ b/src/app/screens/group-category/group-category.component.html
@@ -1,15 +1,16 @@
 <div class="grid min-h-full max-w-full gap-3 p-5">
   <div class="col-8 shadow-4 border-round-lg py-3 px-4">
-    <p class="text-4xl font-semibold mb-5">{{ category?.categoryName }}</p>
+    <p class="text-4xl font-semibold mb-5"></p>
     <p class="text-2xl font-medium">Upcoming Tasks</p>
   </div>
   <div class="grid col-4 gap-4">
     <div class="col-12 shadow-4 border-round-lg py-3 px-4">
       <p class="text-4xl font-semibold mb-5">Calendar</p>
     </div>
-
-    <div class="col-12 shadow-4 border-round-lg py-3 px-4">
-      <p class="text-4xl font-semibold mb-5">Settings</p>
+    <div class="flex flex-column w-full">
+      <div class="col-12 shadow-4 border-round-lg py-3 px-4">
+        <p class="text-4xl font-semibold mb-5">Settings</p>
+      </div>
     </div>
   </div>
 </div>
