delete category now re-routes to home page, added toast to notify user

--- a/client/src/app/pages/category/category.component.html
+++ b/client/src/app/pages/category/category.component.html
@@ -9,7 +9,7 @@
 		</div>
 
 		<div class="w-full">
-			<div (click)="showSettingsDialog()">
+			<div class="cursor-pointer" (click)="showSettingsDialog()">
         <div
           class="flex justify-content-between align-items-center col-12 shadow-4 border-round-lg py-3 px-4">
           <p class="text-4xl font-semibold">Settings</p>
