--- a/client/src/app/pages/category/category.component.html
+++ b/client/src/app/pages/category/category.component.html
@@ -1,7 +1,16 @@
 <div class="grid min-h-full max-w-full gap-3 p-5">
 	<div class="col-8 shadow-4 border-round-lg py-3 px-4">
 		<p class="text-4xl font-semibold mb-5">{{ category?.categoryName }}</p>
-		<p class="text-2xl font-medium">Upcoming Tasks</p>
+		<div class="flex justify-content-between align-items-center">
+			<p class="text-2xl font-medium">Upcoming Tasks</p>
+			<p-button
+				styleClass="p-button-rounded p-button-text p-button-sm"
+				icon="pi pi-plus-circle text-2xl"
+				
+			></p-button>
+		</div>
+		<br />
+		<app-task-container></app-task-container>
 	</div>
 	<div class="grid col-4 gap-4">
 		<div class="col-12 shadow-4 border-round-lg py-3 px-4">
