--- a/client/src/app/components/task/task.component.html
+++ b/client/src/app/components/task/task.component.html
@@ -1,7 +1,5 @@
 <div class="field-checkbox">
 	<p-checkbox id="taskName" value="Task"></p-checkbox>
-	<label for="taskName" class="text-xl font-medium"
-		>Lorem ipsum dolor sit amet
-	</label>
+	<label for="taskName" class="text-xl font-medium">{{ task.name }}</label>
 </div>
-<p class="due-date ml-5 text-black-alpha-70 ">Due on 17 July 2022</p>
+<p class="due-date ml-5 text-black-alpha-70">Due on {{ task.dueDate | date: 'dd MMMM yyyy, HH:mm ' }}</p>
