Add subtask works (no priority yet)

--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -40,7 +40,7 @@
 		<p-button
 			icon="pi pi-plus"
 			styleClass="p-button-rounded"
-			(onClick)="showAddDialog()"
+			(click)="showAddDialog()"
 		></p-button>
 	</div>
 	<p-button
