able to delete and edit tasks/subtasks

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -6,3 +6,8 @@
 </div>
 
 <p-toast position="bottom-right" ></p-toast>
+
+<p-confirmDialog
+	header="Delete Confirmation"
+	icon="pi pi-exclamation-triangle"
+></p-confirmDialog>
