--- a/client/src/app/pages/category/category.component.html
+++ b/client/src/app/pages/category/category.component.html
@@ -85,15 +85,10 @@
 	</p-dialog>
 </form>
 
-<p-confirmDialog
-	header="Delete Confirmation"
-	icon="pi pi-exclamation-triangle"
-></p-confirmDialog>
-
 <form [formGroup]="addTaskForm" (ngSubmit)="addTask()">
 	<p-dialog
-	header="Add Task"
-	[(visible)]="isAddTaskDialogVisible"
+		header="Add Task"
+		[(visible)]="isAddTaskDialogVisible"
 		[modal]="true"
 		[draggable]="false"
 		[resizable]="false"
@@ -110,13 +105,15 @@
 			/>
 		</div>
 		<div class="field">
-			<label for="taskDueDate" class="font-medium text-lg w-full">Due Date</label>
+			<label for="taskDueDate" class="font-medium text-lg w-full"
+				>Due Date</label
+			>
 			<small id="username-help"
 				>Select the date & time when the assignment is due.
 			</small>
 			<p-calendar
-			id="taskDueDate"
-			formControlName="taskDueDate"
+				id="taskDueDate"
+				formControlName="taskDueDate"
 				styleClass="w-full"
 				[inline]="true"
 				[showTime]="true"
@@ -129,15 +126,11 @@
 			<p-dropdown
 				[options]="priorityOptions"
 				formControlName="taskPriority"
-				placeholder="Enter the name of your task"
+				placeholder="How important is this task?"
 			></p-dropdown>
 		</div>
 		<ng-template pTemplate="footer">
-			<button
-				pButton
-				type="submit"
-				[disabled]="!addTaskForm.valid"
-			>
+			<button pButton type="submit" [disabled]="!addTaskForm.valid">
 				Add it
 			</button>
 		</ng-template>
