moved mock data to indiv files, moved confirm dialog header property to component.ts

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,13 +1,10 @@
-<div class="h-screen w-screen flex flex-row" >
+<div class="h-screen w-screen flex flex-row">
 	<app-navbar></app-navbar>
 	<div class="h-full w-full">
 		<router-outlet></router-outlet>
 	</div>
 </div>
 
-<p-toast position="bottom-right" ></p-toast>
+<p-toast position="bottom-right"></p-toast>
 
-<p-confirmDialog
-	header="Delete Confirmation"
-	icon="pi pi-exclamation-triangle"
-></p-confirmDialog>
+<p-confirmDialog icon="pi pi-exclamation-triangle"></p-confirmDialog>
