isCompleted state added to tasks, updates mock data on change

--- a/client/src/app/components/task/task.component.html
+++ b/client/src/app/components/task/task.component.html
@@ -1,6 +1,6 @@
 <div (contextmenu)="showEditTaskDialog($event)">
 	<div class="field-checkbox w-full">
-		<p-checkbox id="taskName" value="Task"></p-checkbox>
+		<p-checkbox id="taskName" [(ngModel)]="isTaskCompleted" [binary]="true" (onChange)="onCompleteStateChange($event.checked)"></p-checkbox>
 		<label for="taskName" class="text-xl font-medium">{{ task.name }}</label>
 	</div>
 	<p class="due-date ml-5 text-black-alpha-70">Due on {{ task.dueDate | date: 'dd MMMM yyyy, HH:mm ' }}</p>
