completed tasks can be restored and deleted

--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -5,6 +5,7 @@
 		[modal]="true"
 		[draggable]="false"
 		[resizable]="false"
+		[dismissableMask]="true"
 	>
 		<div class="field">
 			<label for="categoryName" class="font-medium text-lg"
