--- a/client/src/app/components/task/task.component.html
+++ b/client/src/app/components/task/task.component.html
@@ -1,18 +1,29 @@
 <div (contextmenu)="showEditTaskDialog($event)">
 	<div class="field-checkbox w-full">
-		<p-checkbox id="taskName" [(ngModel)]="isTaskCompleted" [binary]="true" (onChange)="onCompleteStateChange($event.checked)"></p-checkbox>
-		<label for="taskName" class="text-xl font-medium">{{ task.name }}</label>
+		<p-checkbox
+			id="taskName"
+			(onChange)="onCompleteStateChange($event.checked)"
+			[(ngModel)]="isTaskCompleted"
+			[binary]="true"
+			[disabled]="isTaskCompleted && !isSubTask"
+		></p-checkbox>
+		<label for="taskName" class="text-xl font-medium">{{
+			task.name
+		}}</label>
 	</div>
-	<p class="due-date ml-5 text-black-alpha-70">Due on {{ task.dueDate | date: 'dd MMMM yyyy, HH:mm ' }}</p>
+	<p class="due-date ml-5 text-black-alpha-70">
+		Due on {{ task.dueDate | date: "dd MMMM yyyy, HH:mm " }}
+	</p>
 </div>
 
 <form [formGroup]="editTaskForm" (ngSubmit)="editTask()">
 	<p-dialog
-	header="Edit Task"
-	[(visible)]="isEditTaskDialogVisible"
+		header="Edit Task"
+		[(visible)]="isEditTaskDialogVisible"
 		[modal]="true"
 		[draggable]="false"
 		[resizable]="false"
+		[dismissableMask]="true"
 	>
 		<div class="field">
 			<label for="taskName" class="font-medium text-lg">Task Name</label>
@@ -26,13 +37,15 @@
 			/>
 		</div>
 		<div class="field">
-			<label for="taskDueDate" class="font-medium text-lg w-full">Due Date</label>
+			<label for="taskDueDate" class="font-medium text-lg w-full"
+				>Due Date</label
+			>
 			<small id="username-help"
 				>Select the date & time when the assignment is due.
 			</small>
 			<p-calendar
-			id="taskDueDate"
-			formControlName="taskDueDate"
+				id="taskDueDate"
+				formControlName="taskDueDate"
 				styleClass="w-full"
 				[inline]="true"
 				[showTime]="true"
@@ -49,11 +62,7 @@
 			></p-dropdown>
 		</div>
 		<ng-template pTemplate="footer">
-			<button
-				pButton
-				type="submit"
-				[disabled]="!editTaskForm.valid"
-			>
+			<button pButton type="submit" [disabled]="!editTaskForm.valid">
 				Confirm changes
 			</button>
 			<button
@@ -67,4 +76,3 @@
 		</ng-template>
 	</p-dialog>
 </form>
-
