--- a/client/src/app/pages/category/category.component.html
+++ b/client/src/app/pages/category/category.component.html
@@ -1,5 +1,5 @@
-<div class="grid min-h-full max-w-full gap-3 p-5">
-	<div class="col-8 shadow-4 border-round-lg py-3 px-4">
+<div class="grid h-screen max-w-full gap-3 p-5">
+	<div class="h-full overflow-y-scroll col-8 shadow-4 border-round-lg py-3 px-4">
 		<p class="text-4xl font-semibold mb-5">{{ category?.categoryName }}</p>
 		<div class="flex justify-content-between align-items-center">
 			<p class="text-2xl font-medium">Upcoming Tasks</p>
@@ -20,7 +20,7 @@
 			<p class="text-xs">enjoy it while it lasts ;-;</p>
 		</div>
 
-		<div class="flex flex-column gap-3">
+		<div class="flex flex-column gap-3 p-1">
 			<app-task-container
 				*ngFor="let task of taskList"
 				[task]="task"
@@ -28,8 +28,11 @@
 		</div>
 	</div>
 	<div class="grid col-4 gap-4">
-		<div class="col-12 shadow-4 border-round-lg py-3 px-4">
-			<p class="text-4xl font-semibold mb-5">Calendar</p>
+		<div class="col-12 shadow-4 border-round-lg pt-3 pb-4 px-4">
+			<app-calendar
+				[isCategory]="true"
+				[categoryId]="categoryId"
+			></app-calendar>
 		</div>
 		<div class="w-full">
 			<div class="cursor-pointer" (click)="showSettingsDialog()">
@@ -84,7 +87,7 @@
 			</button>
 		</ng-template>
 	</p-dialog>
-</form> 
+</form>
 
 <form [formGroup]="addTaskForm" (ngSubmit)="addTask()">
 	<p-dialog
@@ -117,6 +120,7 @@
 				id="taskDueDate"
 				formControlName="taskDueDate"
 				styleClass="w-full"
+				[dateFormat]="'yyyy-mm-ddThh:mm:ss'"
 				[inline]="true"
 				[showTime]="true"
 			></p-calendar>
