calendar events will bring user to category on click

--- a/client/src/app/pages/home/home.component.html
+++ b/client/src/app/pages/home/home.component.html
@@ -1,14 +1,16 @@
-<div class="grid min-h-full max-w-full gap-3 p-5">
-  <div class="col-8 shadow-4 border-round-lg py-3 px-4">
-    <p class="text-4xl font-semibold mb-5">Good Morning, {{username}} </p>
-    <p class="text-2xl font-medium">Upcoming Tasks</p>
-  </div>
-  <div class="grid col-4 gap-4">
-    <div class="col-12 shadow-4 border-round-lg py-3 px-4">
-      <p class="text-4xl font-semibold mb-5">Calendar</p>
-    </div>
-    <div class="col-12 shadow-4 border-round-lg py-3 px-4">
-      <p class="text-4xl font-semibold mb-5">Bookmarks</p>
-    </div>
-  </div>
+<div class="grid h-screen min-h-full max-w-full gap-3 p-5">
+	<div
+		class="h-full overflow-y-scroll col-8 shadow-4 border-round-lg py-3 px-4"
+	>
+		<p class="text-4xl font-semibold mb-5">Good Morning, {{ username }}</p>
+		<p class="text-2xl font-medium">Upcoming Tasks</p>
+	</div>
+	<div class="grid col-4 gap-4">
+		<div class="col-12 shadow-4 border-round-lg py-3 px-4">
+			<app-calendar [isCategory]="false"></app-calendar>
+		</div>
+		<div class="col-12 shadow-4 border-round-lg py-3 px-4">
+			<p class="text-4xl font-semibold mb-5">Bookmarks</p>
+		</div>
+	</div>
 </div>
