--- a/client/src/app/components/task/task.component.html
+++ b/client/src/app/components/task/task.component.html
@@ -5,7 +5,7 @@
 			(onChange)="onCompleteStateChange($event.checked)"
 			[(ngModel)]="isTaskCompleted"
 			[binary]="true"
-			[disabled]="isTaskCompleted && !isSubTask"
+			[disabled]="(isTaskCompleted && !isSubTask) || isHomePage"
 		></p-checkbox>
 		<label for="taskName" class="text-xl font-medium">{{
 			task.name
