--- a/client/src/app/pages/category/category.component.html
+++ b/client/src/app/pages/category/category.component.html
@@ -2,7 +2,7 @@
 	<div class="h-full overflow-y-scroll col-8 shadow-4 border-round-lg py-3 px-4">
 		<p class="text-4xl font-semibold mb-5">{{ category?.categoryName }}</p>
 		<div class="flex justify-content-between align-items-center">
-			<p class="text-2xl font-medium">Upcoming Tasks</p>
+			<p class="text-2xl font-medium">Tasks</p>
 			<p-button
 				styleClass="p-button-rounded p-button-text p-button-sm"
 				icon="pi pi-plus-circle text-2xl"
