--- a/client/src/app/pages/home/home.component.html
+++ b/client/src/app/pages/home/home.component.html
@@ -4,6 +4,23 @@
 	>
 		<p class="text-4xl font-semibold mb-5">Good Morning, {{ username }}</p>
 		<p class="text-2xl font-medium">Upcoming Tasks</p>
+    <br>
+    <div
+			*ngIf="taskList.length === 0"
+			class="flex flex-column align-items-center justify-content-center w-full shadow-1 border-round-lg p-3"
+		>
+			<p class="font-medium mb-2">
+				<em>FINALLY</em>, some peace and quiet
+			</p>
+			<p class="text-xs">enjoy it while it lasts ;-;</p>
+		</div>
+		<div class="flex flex-column gap-3 p-1">
+			<app-task-container
+				*ngFor="let task of taskList"
+        [isHomePage]="true"
+				[task]="task"
+			></app-task-container>
+		</div>
 	</div>
 	<div class="grid col-4 gap-4">
 		<div class="col-12 shadow-4 border-round-lg py-3 px-4">
