--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -1,42 +1,20 @@
-<form [formGroup]="addCategoryForm" (ngSubmit)="onSubmit()">
-	<p-dialog
-		header="Add Category"
-		[(visible)]="isAddDialogVisible"
-		[modal]="true"
-		[draggable]="false"
-		[resizable]="false"
-		[dismissableMask]="true"
-	>
-		<div class="field">
-			<label for="categoryName" class="font-medium text-lg"
-				>Category Name</label
-			>
-			<input
-				class="w-full"
-				formControlName="categoryName"
-				id="categoryName"
-				type="text"
-				placeholder="Enter the name of your category"
-				pInputText
-			/>
-		</div>
-		<ng-template pTemplate="footer">
-			<button pButton type="submit" [disabled]="!addCategoryForm.valid">
-				ok
-			</button>
-		</ng-template>
-	</p-dialog>
-</form>
-
 <div class="flex flex-column align-items-center h-screen bg-gray-100 p-3">
 	<p-button icon="pi pi-home" routerLink="/home"></p-button>
 	<p-divider></p-divider>
 	<div class="flex flex-column gap-3 h-full">
 		<p-button
 			*ngFor="let category of categoryList"
-			icon="pi pi-book"
+			icon="{{
+				category.categoryType === CategoryType.INDIV
+					? 'pi pi-book'
+					: 'pi pi-users'
+			}}"
 			styleClass="p-button-rounded"
-			routerLink="/category/{{ category.id }}"
+			routerLink="/{{
+				category.categoryType === CategoryType.INDIV
+					? 'category'
+					: 'group'
+			}}/{{ category.id }}"
 		></p-button>
 		<p-button
 			icon="pi pi-plus"
@@ -50,3 +28,40 @@
 		styleClass="p-button-rounded"
 	></p-button>
 </div>
+
+<form [formGroup]="addCategoryForm" (ngSubmit)="onSubmit()">
+	<p-dialog
+		header="Add Category"
+		[(visible)]="isAddDialogVisible"
+		[modal]="true"
+		[draggable]="false"
+		[resizable]="false"
+		[dismissableMask]="true"
+	>
+		<div class="field mb-5">
+			<label for="categoryName" class="font-medium text-lg"
+				>Category Name</label
+			>
+			<input
+				class="w-full"
+				formControlName="categoryName"
+				id="categoryName"
+				type="text"
+				placeholder="Enter the name of your category"
+				pInputText
+			/>
+		</div>
+		<div class="flex justify-content-between align-items-center gap-2">
+			<p class="font-medium text-lg pb-2">Group mode</p>
+			<p-inputSwitch
+				formControlName="categoryType"
+				inputId="categoryType"
+			></p-inputSwitch>
+		</div>
+		<ng-template pTemplate="footer">
+			<button pButton type="submit" [disabled]="!addCategoryForm.valid">
+				Ok
+			</button>
+		</ng-template>
+	</p-dialog>
+</form>
