--- a/client/src/app/pages/group-category/group-category.component.html
+++ b/client/src/app/pages/group-category/group-category.component.html
@@ -1,16 +1,46 @@
 <div class="grid min-h-full max-w-full gap-3 p-5">
-  <div class="col-8 shadow-4 border-round-lg py-3 px-4">
-    <p class="text-4xl font-semibold mb-5"></p>
-    <p class="text-2xl font-medium">Upcoming Tasks</p>
-  </div>
-  <div class="grid col-4 gap-4">
-    <div class="col-12 shadow-4 border-round-lg py-3 px-4">
-      <p class="text-4xl font-semibold mb-5">Calendar</p>
-    </div>
-    <div class="flex flex-column w-full">
-      <div class="col-12 shadow-4 border-round-lg py-3 px-4">
-        <p class="text-4xl font-semibold mb-5">Settings</p>
-      </div>
-    </div>
-  </div>
+	<div class="col-8 shadow-4 border-round-lg py-3 px-4">
+		<p class="text-4xl font-semibold mb-5">{{ category!.categoryName }}</p>
+
+		<div class="flex justify-content-between align-items-center">
+			<p class="text-2xl font-medium">Tasks</p>
+			<p-button
+				styleClass="p-button-rounded p-button-text p-button-sm"
+				icon="pi pi-plus-circle text-2xl"
+				(click)="showAddTaskDialog()"
+			></p-button>
+		</div>
+		<br />
+		<div
+			*ngIf="taskList.length === 0"
+			class="flex flex-column align-items-center justify-content-center w-full shadow-1 border-round-lg p-3"
+		>
+			<p class="font-medium mb-2">
+				<em>FINALLY</em>, some peace and quiet
+			</p>
+			<p class="text-xs">enjoy it while it lasts ;-;</p>
+		</div>
+
+		<div class="flex flex-column gap-3 p-1">
+			<app-task-container
+				*ngFor="let task of taskList"
+				[task]="task"
+			></app-task-container>
+		</div>
+	</div>
+	<div class="grid col-4 gap-4">
+		<div class="col-12 shadow-4 border-round-lg py-3 px-4">
+			<p class="text-4xl font-semibold mb-5">Whiteboard</p>
+		</div>
+		<div class="flex flex-column w-full">
+			<div class="cursor-pointer">
+				<div
+					class="flex justify-content-between align-items-center col-12 shadow-4 border-round-lg py-3 px-4"
+				>
+					<p class="text-4xl font-semibold">Settings</p>
+					<i class="pi pi-cog text-4xl"></i>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
