usernames show on tasks

--- a/client/src/app/components/task/task.component.html
+++ b/client/src/app/components/task/task.component.html
@@ -12,7 +12,7 @@
 		}}</label>
 	</div>
 	<p class="due-date ml-5 text-black-alpha-70">
-		Due on {{ task.dueDate | date: "dd MMMM yyyy, HH:mm " }}
+		Due on {{ task.dueDate | date: "dd MMMM yyyy, HH:mm " }} | {{username}}
 	</p>
 </div>
 
