--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="h-screen w-screen flex flex-row">
-	<app-navbar></app-navbar>
+	<app-navbar *ngIf="isNavbarVisible" ></app-navbar>
 	<div class="h-full w-full">
 		<router-outlet></router-outlet>
 	</div>
