--- a/client/src/app/components/task/task.component.html
+++ b/client/src/app/components/task/task.component.html
@@ -7,12 +7,14 @@
 			[binary]="true"
 			[disabled]="(isTaskCompleted && !isSubTask) || isHomePage"
 		></p-checkbox>
+
 		<label for="taskName" class="text-xl font-medium">{{
 			task.name
 		}}</label>
 	</div>
 	<p class="due-date ml-5 text-black-alpha-70">
-		Due on {{ task.dueDate | date: "dd MMMM yyyy, HH:mm " }} | {{username}}
+		Due on {{ task.dueDate | date: "dd MMMM yyyy, HH:mm " }} |
+		{{ username }}
 	</p>
 </div>
 
