added ability to select test account on home screen

--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -23,7 +23,7 @@
 		></p-button>
 	</div>
 	<p-button
-		icon="pi pi-user"
+		icon="pi pi-sign-out"
 		class="align-content-end"
 		styleClass="p-button-rounded"
 		routerLink="/login"
