--- a/client/src/app/pages/login/login.component.html
+++ b/client/src/app/pages/login/login.component.html
@@ -1,8 +1,23 @@
-<div fxLayout="column" class="p-4">
-  <div fxFlex="50%">
-    <h1>Welcome to Tasky</h1>
-  </div>
-  <div fxFlex="50%">
-    <p-button routerLink="/home">Go to home screen</p-button>
-  </div>
+<div
+	class="h-screen flex flex-column justify-content-center align-items-center"
+>
+	<div>
+		<h1 class="font-bold text-5xl">Welcome to Tasky</h1>
+	</div>
+	<p class="font-medium text-xl">Choose an account to test with</p>
+	<br />
+	<div>
+		<div *ngFor="let user of userList" class="field-radiobutton">
+			<p-radioButton
+				name="accountGroup"
+				value="{{ user.id }}"
+				label="{{ user.username }} | {{ user.type }} Tier"
+				[(ngModel)]="selectedUser"
+			></p-radioButton>
+		</div>
+	</div>
+	<br />
+	<div>
+		<p-button (click)="goToHome()">Go to the home screen</p-button>
+	</div>
 </div>
