--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -11,15 +11,14 @@
 			}}"
 			styleClass="p-button-rounded"
 			routerLink="/{{
-				category.type === CategoryType.INDIV
-					? 'category'
-					: 'group'
+				category.type === CategoryType.INDIV ? 'category' : 'group'
 			}}/{{ category.id }}"
 		></p-button>
 		<p-button
 			icon="pi pi-plus"
 			styleClass="p-button-rounded"
-			(click)="showAddDialog()"
+			[disabled]="user.type === UserType.FREE && categoryList.length >= 8"
+			(onClick)="showAddDialog()"
 		></p-button>
 	</div>
 	<p-button
@@ -57,6 +56,7 @@
 			<p-inputSwitch
 				formControlName="categoryType"
 				inputId="categoryType"
+				[disabled]="user.type === UserType.FREE"
 			></p-inputSwitch>
 		</div>
 		<ng-template pTemplate="footer">
