tester gets yeeted to login if account state resets

--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -17,7 +17,7 @@
 		<p-button
 			icon="pi pi-plus"
 			styleClass="p-button-rounded"
-			[disabled]="user.type === UserType.FREE && categoryList.length >= 8"
+			[disabled]="isDisabled"
 			(onClick)="showAddDialog()"
 		></p-button>
 	</div>
