--- a/client/src/app/pages/login/login.component.html
+++ b/client/src/app/pages/login/login.component.html
@@ -17,7 +17,10 @@
 		</div>
 	</div>
 	<br />
+	<p class="font-semibold text-red-500 text-sm" >PLEASE NOTE THAT REFRESHING THE PAGE WILL RESET ALL CHANGES</p>
+	<p class="font-semibold text-red-500 text-sm">(INCLUDING "LOGIN" STATE)</p>
+	<br>
 	<div>
-		<p-button (click)="goToHome()">Go to the home screen</p-button>
+		<p-button (click)="goToHome()">Go to the Home page</p-button>
 	</div>
 </div>
