user "login" state is saved to local storage, 404 page works now

--- a/client/src/app/pages/not-found404/not-found404.component.html
+++ b/client/src/app/pages/not-found404/not-found404.component.html
@@ -1,3 +1,16 @@
-<div>
-	<p>It appears that the page you are looking for doesn't exist</p>
+<div
+	class="flex flex-column h-screen justify-content-center align-items-center"
+>
+	<p class="font-semibold text-xl">
+		It appears that the page you are looking for doesn't exist
+	</p>
+	<p class="font-medium text-xl">How did you even end up here?</p>
+	<br />
+	<p-image
+		src="https://i.imgflip.com/4/41rbv4.jpg"
+		pTooltip="click to go to home"
+		tooltipPosition="bottom"
+		routerLink="/home"
+		class="cursor-pointer"
+	></p-image>
 </div>
